--- a/candidaturas-psol-respostas.html
+++ b/candidaturas-psol-respostas.html
@@ -13,6 +13,7 @@
 
     <!-- Custom styles for this template -->
     <link href="static/css/navbar.css" rel="stylesheet">
+    <link href="static/css/candidate-poll.css" rel="stylesheet">
   </head>
 
   <body>
@@ -47,5 +48,14 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/highcharts/js/highcharts.js"></script>
+    <script src="static/js/candidate-poll.js"></script>
+
+    <script>
+    $(document).ready(function(){
+      PSOL.CandidatePoll.setupChartBasics();
+      PSOL.CandidatePoll.load();
+    });
+    </script>
   </body>
 </html>
